--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "symfony/test-pack": "^1.0"
     },
     "require": {
+        "php": ">=7.4",
         "squizlabs/php_codesniffer": "^3.6"
     }
 }
